# ScientificWitchery

./: .yarnrc.yml  README.md  bun.lockb  cSpell_dict.txt  contentlayer.config.ts  cspell.json  cypress.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json  vercel_build.sh
app/: layout.tsx  tag-data.json
app/binary/: chart.tsx  page.tsx  parser.tsx
app/converter/: page.tsx
app/projects/: page.tsx
components/: Header.tsx  LayoutWrapper.tsx  Link.tsx  SEO.tsx  Tag.tsx
cypress/e2e/: spec.cy.ts
cypress/support/: commands.ts
data/: headerNavLinks.ts  projectsData.ts  siteMetadata.js
data/authors/: default.mdx
data/blog/: ai-ramp.mdx  anti-ufeatures.mdx  app-thinning.mdx  binary-analysis.mdx  choosing-ios-project-manager.mdx  claude-code-fun.mdx  computer-use-first-glance.mdx  copilot-outtakes.mdx  cursor-agent.mdx  cursor-overview.mdx  cursor-settings-location.mdx  deepseek-r1.mdx  dylib-swizzling.mdx  edit-bars.mdx  failable-tests.mdx  ios-stable-diffusion.mdx  jacks-tooling.mdx  laggy-spm-refresh.mdx  live-text-kvo.mdx  llama-apple-silicon.mdx  llama-ios.mdx  mtaudioprocessing.mdx  narrowing-asserts.mdx  new-features-in-v1.mdx  non-equatable-void.mdx  protocol-objc-bridge-unsafe.mdx  recursive-metal-includes.mdx  road-to-petaflop.mdx  speaker-meaning.mdx  swift-macros-proposal.mdx  tca-binary-size.mdx  tca-state-sharing.mdx  tca-test-recording.mdx  (+5 more)
pages/: binary.tsx  converter.tsx  projects.tsx  test.tsx
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
rust-wasm/tests/: web.rs
scripts/: rss.mjs
(+9 files in other folders)
