[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["Jack Youstra <jack@youstra.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
jomini = { version = "0.25.1", features = ["json", "serde_json"] }
wasm-bindgen = { version = "0.2.63" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
# from branch dependabot/cargo/object-0.32.1
twiggy-parser = { branch = "master", git = "https://github.com/jackyoustra/twiggy" }
twiggy-analyze = { branch = "master", git = "https://github.com/jackyoustra/twiggy" }
twiggy-opt = { branch = "master", git = "https://github.com/jackyoustra/twiggy" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
js-sys = "0.3.66"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
